# MergeTool_V3

./: README.md  setup.cfg  setup.py
src/BTFWMergeTool_v3/: Information.py  MergeTool.py  PatchImageSection.py  PatchStartAddress.py  Project.py  __init__.py
src/BTFWMergeTool_v3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/BTFWMergeTool_v3/TomlFile/: default_config.toml
