[metadata]
name = BTFWMergeTool_v3
version = 0.0.3
author = c.y.lee28
author_email = c.y.lee28@realtek.com
description = Tool for creating bluetooth firmware distributing format
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Utilities

[options]
packages = find:
package_dir = = src
python_requires = >= 3.6
include_package_data = True
install_requires =
    toml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    BTFWMergeTool_v3 = BTFWMergeTool_v3.__init__:main
